--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="calltoaction-wrapper">
-                        <h3>Bienvenue sur le site web du Corps de Cadets 2972 Mercier, un site créé par l'<a href="moi.html" title="Adjum Bouchard-Dulude">Adjudant-Maître William Bouchard-Dulude</a> dans le cadre du cours ordinateurs et production de documents multimédia(420-216-ST)</h3>
+                        <h3>Bienvenue sur le site web du Corps de Cadets 2972 Mercier</h3>
                     </div>
                 </div>
             </div>
@@ -156,7 +156,7 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="service-wrapper">
                         <i class="fa fa-usd"></i>
-                        <h3>Curabitur mollis</h3>
+                        <h3>Gratuit!</h3>
                         <p>Le programme des cadets est entièrement gratuit! Les cadets peuvent même avoir l'opportunité d'optenir un emplois rémunéré durant l'été.</p>
                         <a href="inscriptions.html" class="btn">Lire plus</a>
                     </div>
