--- a/recompenses.html
+++ b/recompenses.html
@@ -46,7 +46,7 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="index.html">Acceuil</a></li>
+                    <li><a href="index.html">Acceuil</a></li>
                     <li><a href="documents/messages.pdf" target="_blank">Messages de la semaine</a></li>
                     <li><a href="inscriptions.html">Inscriptions</a></li>
                     <li class="dropdown">
@@ -65,7 +65,7 @@
                             <li><a href="references_instructeurs.html">Instructeurs</a></li>
                             <li><a href="references_cadets.html">Cadets</a></li>
                             <li><a href="references_cadets-cadres.html">Cadets-cadres</a></li>
-                            <li><a href="recompenses.html">Récompenses</a></li>
+                            <li class="active"><a href="recompenses.html">Récompenses</a></li>
                             <li><a href="grades_fonctions.html">Grades & fonctions</a></li>
                             <li><a href="parents.html">Parents</a></li>
                         </ul>
@@ -89,47 +89,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h1>Adjudant-Maître William Bouchard-Dulude</h1>
+                    <h1>Récompenses</h1>
                 </div>
             </div>
         </div>
     </div>
-    <!--Ca va ressembler a ca:
-        img text
-        hr
-        text img
-       -->
+
     <div class="section">
         <div class="container">
             <div class="row">
-                <div class="col-sm-4">
-                    <img class="img-responsive" src="img/about-us.jpg" alt="About Us">
-                </div>
-                <div class="col-sm-8">
-                    <h2>We are a Graphic Design company</h2>
-                    <h3>Specializing in Wordpress Theme Development</h3>
-                    <p>
-                        Donec elementum mi vitae enim fermentum lobortis. In hac habitasse platea dictumst. Ut pellentesque, orci sed mattis consequat, libero ante lacinia arcu, ac porta lacus urna in lorem. Praesent consectetur tristique augue, eget elementum diam suscipit id. Donec elementum mi vitae enim fermentum lobortis. In hac habitasse platea dictumst. Ut pellentesque, orci sed mattis consequat, libero ante lacinia arcu, ac porta lacus urna in lorem. Praesent consectetur tristique augue, eget elementum diam suscipit id.
-                    </p>
-                    <p>
-                        Donec elementum mi vitae enim fermentum lobortis. In hac habitasse platea dictumst. Ut pellentesque, orci sed mattis consequat, libero ante lacinia arcu, ac porta lacus urna in lorem. Praesent consectetur tristique augue, eget elementum diam suscipit id.
-                    </p>
-                    <h3>Wide range of services</h3>
-                    <p>
-                        Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam condimentum laoreet sagittis. Duis quis ullamcorper leo. Suspendisse potenti.
-                        Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam condimentum laoreet sagittis. Duis quis ullamcorper leo. Suspendisse potenti.
-                    </p>
-
-
-
-                    <div class="clients-logo-wrapper text-center row">
-                        <div class="col-lg-2 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/logo-1.jpg" alt="Client Name"></a></div>
-                        <div class="col-lg-2 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/logo-2.jpg" alt="Client Name"></a></div>
-                        <div class="col-lg-2 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/logo-3.jpg" alt="Client Name"></a></div>
-                        <div class="col-lg-2 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/logo-4.jpg" alt="Client Name"></a></div>
-                        <div class="col-lg-2 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/logo-5.jpg" alt="Client Name"></a></div>
-                        <div class="col-lg-2 col-md-1 col-sm-3 col-xs-6"><a href="#"><img src="img/logos/logo-6.jpg" alt="Client Name"></a></div>
-                    </div>
+                <div class="col-sm-12">
+                    <h1>Critères de sélection des distinctions individuelles</h1>
+                    <p>Voici les <a href="documents/CRITÈRES DISTINCTIONS IND. V 2.pdf" target="_blank">critères de sélection des distinctions individuelles</a>.</p>
                 </div>
             </div>
         </div>
@@ -138,127 +109,32 @@
     <div class="section">
         <div class="container">
             <div class="row">
-                <!-- Team Member -->
-                <div class="col-md-4 col-sm-6">
-                    <div class="team-member">
-                        <!-- Team Member Photo -->
-                        <div class="team-member-image"><img src="img/team/1.jpg" alt="Name Surname"></div>
-                        <div class="team-member-info">
-                            <ul>
-                                <!-- Team Member Info & Social Links -->
-                                <li class="team-member-name">
-                                    Nicolas Freeman
-                                    <!-- Team Member Social Links -->
-                                    <span class="team-member-social">
-                                        <a href="#"><i class="icon-facebook"></i></a>
-                                        <a href="#"><i class="icon-github"></i></a>
-                                        <a href="#"><i class="icon-tumblr"></i></a>
-                                    </span>
-                                </li>
-                                <li>Web Developer</li>
-                            </ul>
-                        </div>
-                    </div>
+                <div class="col-sm-12">
+                    <h1>Critères de sélections des cadets et du peloton du mois</h1>
+                    <h3>Cadets du mois</h3>
+                    <p>Les cadets du mois sont évalués par niveau selon les critères suivant :</p>
+                    <ul>
+                        <li>Taux de présence lors des soirées d’instructions</li>
+                        <li>Taux de présence lors des activités complémentaires et optionnelles</li>
+                        <li>Participation aux activités</li>
+                        <li>Amélioration</li>
+                        <li>Respect des autres</li>
+                        <li>Tenue</li>
+                        <li>Action positive/négative</li>
+                        <li>Matériel remis en retard administration/quartier-maître</li>
+                    </ul>
+                    <h3>Peloton du mois</h3>
+                    <p>Les pelotons sont évalués selon les critères suivant :</p>
+                    <ul>
+                        <li>Moyenne des présences du peloton lors des soirées d’instructions</li>
+                        <li>Moyenne des présences du peloton lors des activités complémentaires et optionnelles</li>
+                        <li>Moyenne des inspections du peloton</li>
+                        <li>Évaluation de l’exercice militaire selon le SMC</li>
+                        <li>Point boni selon diverse activité lors du mois</li>
+                        <li>Action positive/négative</li>
+                        <li>Matériel remis en retard administration/quartier-maître</li>
+                    </ul>
                 </div>
-                <!-- End Team Member -->
-                <div class="col-md-4 col-sm-6">
-                    <div class="team-member">
-                        <div class="team-member-image"><img src="img/team/2.jpg" alt="Name Surname"></div>
-                        <div class="team-member-info">
-                            <ul>
-                                <li class="team-member-name">
-                                    Sarah Tipton
-                                    <span class="team-member-social">
-                                        <a href="#"><i class="icon-facebook"></i></a>
-                                        <a href="#"><i class="icon-dribbble"></i></a>
-                                        <a href="#"><i class="icon-tumblr"></i></a>
-                                    </span>
-                                </li>
-                                <li>Web Designer</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <div class="team-member">
-                        <div class="team-member-image"><img src="img/team/3.jpg" alt="Name Surname"></div>
-                        <div class="team-member-info">
-                            <ul>
-                                <li class="team-member-name">
-                                    Luca Grammont
-                                    <span class="team-member-social">
-                                        <a href="#"><i class="icon-facebook"></i></a>
-                                        <a href="#"><i class="icon-dribbble"></i></a>
-                                        <a href="#"><i class="icon-tumblr"></i></a>
-                                    </span>
-                                </li>
-                                <li>Project Manager</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <hr>
-    <div class="section">
-        <div class="container">
-            <div class="row">
-                <!-- Featured News -->
-                <div class="col-sm-6 featured-news">
-                    <h2>Latest Blog Posts</h2>
-                    <div class="row">
-                        <div class="col-xs-4"><a href="blog-post.html"><img src="img/blog/1.jpg" alt="Post Title"></a></div>
-                        <div class="col-xs-8">
-                            <div class="caption"><a href="blog-post.html">Lorem ipsum dolor sit amet</a></div>
-                            <div class="date">14 August 2014 </div>
-                            <div class="intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. <a href="blog-post.html">Read more...</a></div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-4"><a href="blog-post.html"><img src="img/blog/2.jpg" alt="Post Title"></a></div>
-                        <div class="col-xs-8">
-                            <div class="caption"><a href="blog-post.html">Sed ut perspiciatis unde omnis</a></div>
-                            <div class="date">23 June 2014 </div>
-                            <div class="intro">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <a href="blog-post.html">Read more...</a></div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-xs-4"><a href="blog-post.html"><img src="img/blog/3.jpg" alt="Post Title"></a></div>
-                        <div class="col-xs-8">
-                            <div class="caption"><a href="blog-post.html"> Neque porro quisquam est</a></div>
-                            <div class="date">21 April 2014 </div>
-                            <div class="intro">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <a href="blog-post.html">Read more...</a></div>
-                        </div>
-                    </div>
-                </div>
-                <!-- End Featured News -->
-                <!-- Latest News -->
-                <div class="col-sm-6 latest-news">
-                    <h2>Latest News</h2>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="caption"><a href="full-width.html">Donec elementum mi vitae enim fermentum lobortis.</a></div>
-                            <div class="date">16 May 2013 </div>
-                            <div class="intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et. <a href="full-width.html">Read more...</a></div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="caption"><a href="full-width.html">In hac habitasse platea dictumst.</a></div>
-                            <div class="date">14 May 2013 </div>
-                            <div class="intro">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <a href="full-width.html">Read more...</a></div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="caption"><a href="full-width.html"> Nam condimentum laoreet sagittis.</a></div>
-                            <div class="date">14 May 2013 </div>
-                            <div class="intro">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <a href="full-width.html">Read more...</a></div>
-                        </div>
-                    </div>
-                </div>
-                <!-- End Featured News -->
             </div>
         </div>
     </div>
