ajout formulaire de contact

--- a/references_cadets-cadres.html
+++ b/references_cadets-cadres.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link href="css/custom.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <script src="js/index.js"></script>
+    <script src="src/index.js"></script>
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,600,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
@@ -42,7 +42,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="images/logo_sans_transparence.jpg" alt="Logo CC2972"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo_sans_transparence.jpg"
+                        alt="Logo CC2972"></a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -50,7 +51,8 @@
                     <li><a href="documents/messages.pdf" target="_blank">Messages de la semaine</a></li>
                     <li><a href="inscriptions.html">Inscriptions</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités<i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités<i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="activites_optionnelles.html">Activités optionnelles</a></li>
                             <li><a href="instruction_ete.html">Instruction d'été</a></li>
@@ -60,7 +62,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documents de référence<i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documents de référence<i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="references_instructeurs.html">Instructeurs</a></li>
                             <li><a href="references_cadets.html">Cadets</a></li>
@@ -71,7 +74,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Le Corps de Cadets <i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Le Corps de Cadets <i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="historique.html">Notre histoire</a></li>
                             <li><a href="distinctions.html">Distinctions</a></li>
@@ -99,22 +103,34 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <p><a href="documents/DÉFINITION_DES_TÂCHES_CADET-CADRE.pdf" target="_blank">Définitions de tâches des cadets-cadres</a></p>
+                    <p><a href="documents/DÉFINITION_DES_TÂCHES_CADET-CADRE.pdf" target="_blank">Définitions de tâches
+                            des cadets-cadres</a></p>
                     <h1>Sous-officier de service</h1>
                     <h3>Attribution</h3>
                     <p>
-                        Le poste de sous-officier de service est occupé par les cadets de l’étoile argentée et plus du Corps de cadets, qui en assumeront la responsabilité, un à la fois, à tour de rôle. Lorsqu'il est en service, le sous-officier de service est sous le commandement direct de l'officier de service. Cette fonction n'est pas permanente et ne donne pas droit au titre de cadet-cadre.
+                        Le poste de sous-officier de service est occupé par les cadets de l’étoile argentée et plus du
+                        Corps de cadets, qui en assumeront la responsabilité, un à la fois, à tour de rôle. Lorsqu'il
+                        est en service, le sous-officier de service est sous le commandement direct de l'officier de
+                        service. Cette fonction n'est pas permanente et ne donne pas droit au titre de cadet-cadre.
                     </p>
                     <h3>Responsabilités</h3>
                     <ul>
-                        <li>Le sous-officier de service devra se présenter sur les lieux de l’entraînement 15 minutes avant l'arrivée des autres cadets ou à l'heure désignée par l’officier de service.</li>
-                        <li>Se rapporte à l’officier de service dès son arrivée et attendra son autorisation pour quitter.</li>
-                        <li>Doit accompagner l'officier de service pour l'ouverture et la fermeture du site d’instruction.</li>
-                        <li>Responsable de la tenue du rapport d’entraînement et doit le remettre à l’officier de service à la fin de la journée.</li>
-                        <li>Responsable de faire placer le matériel afin d’assurer le bon fonctionnement de la soirée d’instruction en début de soirée  et de les rapporter en fin de soirée.</li>
-                        <li>Doit signaler dans son rapport tout danger pour la sécurité des cadets sur le site d'entraînement ou d'instruction.</li>
-                        <li>S'assurer de la propreté des locaux avant de procéder à l’inspection par l'officier de service.</li>
-                        <li>Doit assister à l'entraînement requis par son programme de niveau, hormis les 5 dernières minutes de ses cours.</li>
+                        <li>Le sous-officier de service devra se présenter sur les lieux de l’entraînement 15 minutes
+                            avant l'arrivée des autres cadets ou à l'heure désignée par l’officier de service.</li>
+                        <li>Se rapporte à l’officier de service dès son arrivée et attendra son autorisation pour
+                            quitter.</li>
+                        <li>Doit accompagner l'officier de service pour l'ouverture et la fermeture du site
+                            d’instruction.</li>
+                        <li>Responsable de la tenue du rapport d’entraînement et doit le remettre à l’officier de
+                            service à la fin de la journée.</li>
+                        <li>Responsable de faire placer le matériel afin d’assurer le bon fonctionnement de la soirée
+                            d’instruction en début de soirée et de les rapporter en fin de soirée.</li>
+                        <li>Doit signaler dans son rapport tout danger pour la sécurité des cadets sur le site
+                            d'entraînement ou d'instruction.</li>
+                        <li>S'assurer de la propreté des locaux avant de procéder à l’inspection par l'officier de
+                            service.</li>
+                        <li>Doit assister à l'entraînement requis par son programme de niveau, hormis les 5 dernières
+                            minutes de ses cours.</li>
                         <li>Exécuter toutes autres tâches assignées par ses supérieurs.</li>
                     </ul>
                 </div>
@@ -140,25 +156,35 @@
                     <h3>Nos réseau sociaux</h3>
                     <p>Vous pouvez suivre nos activités sur nos réseau sociaux!</p>
                     <div>
-                        <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank" title="Page Facebook"><img src="images/logo_facebook.png" width="64" alt="Logo Facebook"></a>
-                        <a href="https://www.youtube.com/channel/UCUT2GMLgayAYEAXQVBiPgnQ/feed" target="_blank" title="Chaine YouTube"><img src="images/logo_youtube.png" width="64" alt="Logo YouTube"></a>
-                        <a href="https://instagram.com/cc2972.mercier/" target="_blank" title="Page Instagram"><img src="images/logo_instagram.png" width="64" alt="Logo Instagram"></a>
+                        <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank"
+                            title="Page Facebook"><img src="images/logo_facebook.png" width="64"
+                                alt="Logo Facebook"></a>
+                        <a href="https://www.youtube.com/channel/UCUT2GMLgayAYEAXQVBiPgnQ/feed" target="_blank"
+                            title="Chaine YouTube"><img src="images/logo_youtube.png" width="64" alt="Logo YouTube"></a>
+                        <a href="https://instagram.com/cc2972.mercier/" target="_blank" title="Page Instagram"><img
+                                src="images/logo_instagram.png" width="64" alt="Logo Instagram"></a>
                     </div>
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
                     <h3>À propos de nous</h3>
-                    <p>Les cadets royaux de l’Armée canadienne attirent les adolescents qui ont soif d'aventures et d’activités excitantes en plein air où leurs limites personnelles individuelles et comme membres d’équipes seront testées.</p>
+                    <p>Les cadets royaux de l’Armée canadienne attirent les adolescents qui ont soif d'aventures et
+                        d’activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
+                        d’équipes seront testées.</p>
                 </div>
 
             </div>
             <div class="row">
                 <div class="col-md-12">
                     <div class="footer-copyright">
-                        &copy; 2023 Corps de Cadets 2972 Mercier<br><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licence Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
+                        &copy; 2023 Corps de Cadets 2972 Mercier<br><a rel="license"
+                            href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licence Creative Commons"
+                                style="border-width:0"
+                                src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
