--- a/duc.html
+++ b/duc.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link href="css/custom.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <script src="js/index.js"></script>
+    <script src="src/index.js"></script>
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,600,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
