--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link href="css/custom.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <script src="js/index.js"></script>
+    <script src="src/index.js"></script>
 
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,600,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet' type='text/css'>
@@ -42,7 +42,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html"><img src="images/logo_sans_transparence.jpg" alt="Logo CC2972"></a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo_sans_transparence.jpg"
+                        alt="Logo CC2972"></a>
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav navbar-right">
@@ -50,7 +51,8 @@
                     <li><a href="documents/messages.pdf" target="_blank">Messages de la semaine</a></li>
                     <li><a href="inscriptions.html">Inscriptions</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités<i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Activités<i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="activites_optionnelles.html">Activités optionnelles</a></li>
                             <li><a href="instruction_ete.html">Instruction d'été</a></li>
@@ -60,7 +62,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documents de référence<i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Documents de référence<i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="references_instructeurs.html">Instructeurs</a></li>
                             <li><a href="references_cadets.html">Cadets</a></li>
@@ -71,7 +74,8 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Le Corps de Cadets <i class="icon-angle-down"></i></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Le Corps de Cadets <i
+                                class="icon-angle-down"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="historique.html">Notre histoire</a></li>
                             <li><a href="distinctions.html">Distinctions</a></li>
@@ -149,7 +153,8 @@
                     <div class="service-wrapper">
                         <i class="fa fa-globe"></i>
                         <h3>Expeditions</h3>
-                        <p>Les cadets peuvent participer à plusieurs expédition que ce soit au Canada ou ailleur dans le monde et tout cela, gratuitement.</p>
+                        <p>Les cadets peuvent participer à plusieurs expédition que ce soit au Canada ou ailleur dans le
+                            monde et tout cela, gratuitement.</p>
                         <a href="expeditions.html" class="btn">Lire plus</a>
                     </div>
                 </div>
@@ -157,7 +162,8 @@
                     <div class="service-wrapper">
                         <i class="fa fa-usd"></i>
                         <h3>Gratuit!</h3>
-                        <p>Le programme des cadets est entièrement gratuit! Les cadets peuvent même avoir l'opportunité d'optenir un emplois rémunéré durant l'été.</p>
+                        <p>Le programme des cadets est entièrement gratuit! Les cadets peuvent même avoir l'opportunité
+                            d'optenir un emplois rémunéré durant l'été.</p>
                         <a href="inscriptions.html" class="btn">Lire plus</a>
                     </div>
                 </div>
@@ -165,7 +171,8 @@
                     <div class="service-wrapper">
                         <i class="fa fa-child"></i>
                         <h3>Camps d'été</h3>
-                        <p>Les cadets peuvent avoir l'occasion de faire un camp d'une durée de 2, 3 ou 6 semaines sur le camps de cadets de Valcartier.</p>
+                        <p>Les cadets peuvent avoir l'occasion de faire un camp d'une durée de 2, 3 ou 6 semaines sur le
+                            camps de cadets de Valcartier.</p>
                         <a href="instruction_ete.html" class="btn">Lire plus</a>
                     </div>
                 </div>
@@ -177,30 +184,46 @@
 
     <hr>
 
-    <div class="section section-white">
+    <div class="section">
         <div class="container">
             <div class="row">
+                <div class="col-sm-12">
 
-                <div class="section-title">
-                    <h1>Le défi ultime!</h1>
+                    <div class="section-title">
+                        <h1>Le défi ultime!</h1>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <p>Les cadets royaux de l’Armée canadienne attirent les adolescents qui ont soif d'aventures et d’activités excitantes en plein air où leurs limites personnelles individuelles et comme membres d’équipes seront 
-                testées. Les inconditionnels des activités en plein-air vont adorer les défis que nous offrons!</p>
+                <p>Les cadets royaux de l’Armée canadienne attirent les adolescents qui ont soif d'aventures et
+                    d’activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
+                    d’équipes seront
+                    testées. Les inconditionnels des activités en plein-air vont adorer les défis que nous offrons!
+                </p>
 
-                <p>Les cadets de l’Armée vont développer leurs habiletés dans le maniement de cartes et boussoles, du GPS, de l’orienteering, des premiers-soins, de la survie et du camping en forêt, du canotage, de la descente en 
-                rappel, de la randonnée, du vélo de montage, etc. Alors qu’ils acquièrent de l’expérience, certains vont aussi être sélectionnés pour des activités excitantes comme le parachutisme, la descente de rivière en 
-                canot, l’escalade de glacier et ils apprendront à devenir des leaders de plein-air.</p>
+                <p>Les cadets de l’Armée vont développer leurs habiletés dans le maniement de cartes et boussoles,
+                    du GPS, de l’orienteering, des premiers-soins, de la survie et du camping en forêt, du canotage,
+                    de la descente en
+                    rappel, de la randonnée, du vélo de montage, etc. Alors qu’ils acquièrent de l’expérience,
+                    certains vont aussi être sélectionnés pour des activités excitantes comme le parachutisme, la
+                    descente de rivière en
+                    canot, l’escalade de glacier et ils apprendront à devenir des leaders de plein-air.</p>
 
-                <p>Les cadets de l’Armée participent à des activités reliées aux traditions des cérémonies militaires et de civisme qui leur permettent d’honorer leur héritage canadien. Ils développent un grand sens de fierté et 
-                de discipline par l’utilisation d’un système hiérarchique qui leur permet de parfaire leurs capacités de chef de file. Avec l'expérience, ils apprennent à se soucier des plus jeunes cadets.</p>
+                <p>Les cadets de l’Armée participent à des activités reliées aux traditions des cérémonies
+                    militaires et de civisme qui leur permettent d’honorer leur héritage canadien. Ils développent
+                    un grand sens de fierté et
+                    de discipline par l’utilisation d’un système hiérarchique qui leur permet de parfaire leurs
+                    capacités de chef de file. Avec l'expérience, ils apprennent à se soucier des plus jeunes
+                    cadets.</p>
 
-                <p>En plus de l’instruction spécialisée, les cadets de l’Armée participent aussi à d’autres activités passionnantes comme le tir à la carabine de style olympique et le biathlon, des compétitions sportives, de 
-                l’instruction et des compétitions musicales, des visites culturelles, des activités bénévoles de soutien à la communauté, etc.</p>
+                <p>En plus de l’instruction spécialisée, les cadets de l’Armée participent aussi à d’autres
+                    activités passionnantes comme le tir à la carabine de style olympique et le biathlon, des
+                    compétitions sportives, de
+                    l’instruction et des compétitions musicales, des visites culturelles, des activités bénévoles de
+                    soutien à la communauté, etc.</p>
 
-                <p>Le Canada est le terrain de jeu par excellence pour les adolescents intéressés par le plein air. Nous sommes l’organisation par excellence pour les jeunes et les adultes intéressés à sortir de la salle de 
-                classe pour explorer la planète à son plein potentiel.</p>
+                <p>Le Canada est le terrain de jeu par excellence pour les adolescents intéressés par le plein air.
+                    Nous sommes l’organisation par excellence pour les jeunes et les adultes intéressés à sortir de
+                    la salle de
+                    classe pour explorer la planète à son plein potentiel.</p>
             </div>
         </div>
     </div>
@@ -225,25 +248,35 @@
                     <h3>Nos réseau sociaux</h3>
                     <p>Vous pouvez suivre nos activités sur nos réseau sociaux!</p>
                     <div>
-                        <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank" title="Page Facebook"><img src="images/logo_facebook.png" width="64" alt="Logo Facebook"></a>
-                        <a href="https://www.youtube.com/channel/UCUT2GMLgayAYEAXQVBiPgnQ/feed" target="_blank" title="Chaine YouTube"><img src="images/logo_youtube.png" width="64" alt="Logo YouTube"></a>
-                        <a href="https://instagram.com/cc2972.mercier/" target="_blank" title="Page Instagram"><img src="images/logo_instagram.png" width="64" alt="Logo Instagram"></a>
+                        <a href="https://www.facebook.com/CorpsdeCadets2972Mercier/timeline" target="_blank"
+                            title="Page Facebook"><img src="images/logo_facebook.png" width="64"
+                                alt="Logo Facebook"></a>
+                        <a href="https://www.youtube.com/channel/UCUT2GMLgayAYEAXQVBiPgnQ/feed" target="_blank"
+                            title="Chaine YouTube"><img src="images/logo_youtube.png" width="64" alt="Logo YouTube"></a>
+                        <a href="https://instagram.com/cc2972.mercier/" target="_blank" title="Page Instagram"><img
+                                src="images/logo_instagram.png" width="64" alt="Logo Instagram"></a>
                     </div>
                 </div>
                 <div class="col-footer col-md-4 col-xs-6">
                     <h3>À propos de nous</h3>
-                    <p>Les cadets royaux de l’Armée canadienne attirent les adolescents qui ont soif d'aventures et d’activités excitantes en plein air où leurs limites personnelles individuelles et comme membres d’équipes seront testées.</p>
+                    <p>Les cadets royaux de l’Armée canadienne attirent les adolescents qui ont soif d'aventures et
+                        d’activités excitantes en plein air où leurs limites personnelles individuelles et comme membres
+                        d’équipes seront testées.</p>
                 </div>
 
             </div>
             <div class="row">
                 <div class="col-md-12">
                     <div class="footer-copyright">
-                        &copy; 2023 Corps de Cadets 2972 Mercier<br><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licence Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
+                        &copy; 2023 Corps de Cadets 2972 Mercier<br><a rel="license"
+                            href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licence Creative Commons"
+                                style="border-width:0"
+                                src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </body>
+
 </html>
